fixing padding on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -98,9 +98,12 @@ header a {
 
 section {
     align-items: center;
-    margin: 150px 0;
+    padding: 75px 0;
     color: #223247;
-    padding: 20px 0;
+}
+
+.last-section {
+    padding-bottom: 125px;
 }
 
 .text-one {
@@ -168,11 +171,12 @@ footer {
     color: white;
     text-decoration: none;
     width: 100%;
-    padding: 10px 25px;
+    padding: 10px 0px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: absolute;
+    position: fixed;
+    bottom: 0;
     height: 5.5rem;
     align-items: center;
 }
@@ -186,6 +190,8 @@ footer a {
 .footer-text {
     width: 70%;
     font-size: 10px;
+    padding-left: 100px;
+    padding-right: 20px;
 }
 
 .footer-text p {
@@ -197,11 +203,12 @@ footer a {
 }
 
 .footer-imgs {
-    width: 20%;
+    /* width: 20%; */
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 25px;
+    padding-right: 100px;
 }
 
 .footer-imgs a {
@@ -219,6 +226,12 @@ footer a {
 }
 
 /* ----------------------------- responsive design */
+
+@media screen and (max-width: 1024px) {
+    .img2 img, .img3 img, .img4 img, .img5 img {
+        max-width: 320px;
+    }
+}
 
 @media screen and (max-width: 930px) {
     header nav ul li a {
@@ -352,13 +365,21 @@ footer a {
         padding: 0 10px;
     }
 
-    .section-left {
+    .text-left, .text-right {
+        padding: 0 50px;
+    }
+
+    .first-wrapper .text {
+        padding: 0 50px;
+    }
+
+    /* .section-left {
         padding-left: 0;
     }
 
     .section-right {
         padding-right: 0;
-    }
+    } */
 
     .wrapper h2 {
         text-align: center;
